--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+__pycache__/
+*.py[cod]
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
+ENV/
+env/
+.venv
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+.pytest_cache/
+.coverage
+.env
+.env.local
+*.log
+.dockerignore
+node_modules/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
