--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,13 @@
-# CreditPath-AI Backend Requirements
-
-# Web Framework
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 pydantic==2.5.0
-
-# Data Processing
+pydantic-core==2.14.1
 pandas==2.1.3
 numpy==1.26.2
-
-# Machine Learning
 scikit-learn==1.3.2
-xgboost==2.0.2
 lightgbm==4.1.0
+xgboost==2.0.3
 imbalanced-learn==0.11.0
-
-# Utilities
 python-multipart==0.0.6
-
-# Optional (for production)
-# gunicorn==21.2.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
